<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView1"
    tools:context=".GpmCalcActivity"
    android:background="@android:color/background_light"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#7985ff">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friction_loss_formula_title"
                android:id="@+id/frictionLossTitleTextView"
                android:gravity="center"
                android:textSize="22sp"
                android:layout_weight="1"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#7985ff">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frictionLossFormulaTextView"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/fl_formula"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#7985ff">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/coeffEditText"
            android:inputType="number|numberDecimal"
            android:layout_weight="1"
            android:gravity="center"
            android:nextFocusRight="@+id/gpmEditText"
            android:nextFocusDown="@+id/gpmEditText"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/gpmEditText"
            android:inputType="number"
            android:layout_weight="1"
            android:gravity="center"
            android:nextFocusRight="@+id/lengthEditText"
            android:nextFocusDown="@+id/lengthEditText"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lengthEditText"
            android:inputType="number"
            android:layout_weight="1"
            android:gravity="center"
            android:nextFocusDown="@+id/diameterEditText"
            android:textColor="@android:color/black"/>

    </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:background="#7985ff">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/coefficient_label"
                android:id="@+id/coefficientTextView"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/gpm_label"
                android:id="@+id/GpmTextView"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hose_length_label"
                android:id="@+id/hoseLengthTextView"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#7985ff">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/flTextView"

                android:textSize="22sp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:textStyle="bold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fl_calc_button_label"
                android:id="@+id/flCalculateButton"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gpm_formula_label"
                android:id="@+id/gpmTitleTextView"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gpmFormulaTextView"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/gpm_formula"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
            >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/diameterEditText"
            android:inputType="number|numberDecimal"
            android:layout_weight="1"
            android:gravity="center"
            android:nextFocusDown="@+id/npEditText"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/npEditText"
            android:inputType="number"
            android:layout_weight="1"
            android:gravity="center"
            android:nextFocusDown="@+id/nozzleDiameterEditText"
            android:textColor="@android:color/black"/>
    </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nozzle_diameter_label"
                android:id="@+id/nozzleDiameterTextView"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nozzle_pressure_label"
                android:id="@+id/nozzlePressureTextView"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/gpmTextView"

                android:textSize="22sp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:textStyle="bold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/gpm_calculation_button_label"
                android:id="@+id/gpmCalculateButton"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff2f2b">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nozzle_reaction_label"
                android:id="@+id/nozzleReactionTitleTextView"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff2f2b">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nr_formula"
                android:id="@+id/nozzleReactionFormulaTextView"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff2f2b"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nozzleDiameterEditText"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number|numberDecimal"
                android:nextFocusDown="@+id/nozzlePressureEditText"
                android:textColor="@android:color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nozzlePressureEditText"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:background="#ff2f2b">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nozzle_diam_label"
                android:id="@+id/nozzDiameterTextView"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/noz_press_label"
                android:id="@+id/nozzPressTextView"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff2f2b">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/NrTextView"
                android:layout_weight="1"
                android:textSize="22sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:textStyle="bold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nr_calculation_button_label"
                android:id="@+id/nrCalculateButton"
                android:layout_weight="2"
                android:textColor="@android:color/black"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
