<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView"
    tools:context=".MainActivity"
    android:background="@android:color/background_light"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hose_1_label"
            android:id="@+id/hoseLine1Label"
            android:background="#7985ff"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingTop="5dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#7985ff"
            android:layout_weight="1">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nozzleSpinner"
                android:clickable="true"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/hose1Spinner"
                android:clickable="true"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/hose2Spinner"
                android:clickable="true"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#7985ff"
            android:layout_marginBottom="2dp"
            android:layout_weight="1">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/hose3Spinner"
                android:clickable="true"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/applianceSpinner"
                android:clickable="true"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/floorSpinner"
                android:clickable="true"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hose_2_label"
            android:id="@+id/hoseLine2Label"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingTop="5dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nozzleSpinner2"
                android:layout_weight="1"
                android:clickable="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/hose1Spinner2"
                android:layout_weight="1"
                android:clickable="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/hose2Spinner2"
                android:layout_weight="1"
                android:clickable="true"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/hose3Spinner2"
                android:layout_weight="1"
                android:clickable="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/applianceSpinner2"
                android:layout_weight="1"
                android:clickable="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/floorSpinner2"
                android:layout_weight="1"
                android:clickable="true"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hose_3_label"
            android:id="@+id/hoseLine3Label"
            android:background="#ff2f2b"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingTop="5dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff2f2b"
            android:layout_weight="1">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nozzleSpinner3"
                android:layout_weight="1"
                android:clickable="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/hose1Spinner3"
                android:layout_weight="1"
                android:clickable="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/hose2Spinner3"
                android:layout_weight="1"
                android:clickable="true"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff2f2b"
            android:layout_marginBottom="2dp"
            android:layout_weight="1">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/hose3Spinner3"
                android:layout_weight="1"
                android:clickable="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/applianceSpinner3"
                android:layout_weight="1"
                android:clickable="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/floorSpinner3"
                android:layout_weight="1"
                android:clickable="true"/>
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/resultTextView"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:background="#f9ff2c"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/psi_hose_1_label"
                    android:id="@+id/psiHose1TextView"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:paddingStart="4dp"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/resultTextView2"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="24sp"
                    android:background="#f9ff2c"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/psi_hose_2_label"
                    android:id="@+id/psiHose2TextView"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:paddingStart="4dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_dark"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/resultTextView3"
                    android:textSize="24sp"
                    android:textColor="@android:color/holo_red_dark"
                    android:background="#f9ff2c"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/psi_hose_3_label"
                    android:id="@+id/psiHose3TextView"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:paddingStart="4dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_dark"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="6dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id="@+id/resultTextView4"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:background="#f9ff2c"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/psiAtThePump"
                android:id="@+id/psiLabelTextView"
                android:textColor="@android:color/holo_red_dark"
                android:layout_gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:id="@+id/calculateButton"
                android:background="#1313ff"
                android:textColor="@android:color/white"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:id="@+id/resetButton"
                android:background="#1313ff"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>